html-layout-form

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
       method="post"
       autocomplete="off"
       onsubmit="onSubmit()"
-      class="main-form">
+      class="main-form"
+    >
 
       <fieldset class="main-form">
         <legend>Personal Information</legend>
