fixed-ilya-comments

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
       method="post"
       autocomplete="off"
       onsubmit="onSubmit()"
-      class="main-form__fieldset"
+      class="main-form"
     >
 
-      <fieldset class="main-form">
+      <fieldset class="main-form__fieldset">
         <legend>Personal Information</legend>
 
         <div class="form-field">
@@ -72,7 +72,7 @@
         </div>
       </fieldset>
 
-      <fieldset class="main-form">
+      <fieldset class="main-form__fieldset">
         <legend>Registration</legend>
 
         <div class="form-field">
@@ -99,7 +99,7 @@
         </div>
       </fieldset>
 
-      <fieldset class="main-form">
+      <fieldset class="main-form__fieldset">
         <legend>An interesting fact about you!</legend>
 
         <div class="form-field">
@@ -164,7 +164,7 @@
         </div>
       </fieldset>
 
-      <fieldset class="main-form">
+      <fieldset class="main-form__fieldset">
         <legend>Additional info:</legend>
         <div class="form-field">
           <label for="comments">Comments:</label>
