--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,93 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset class="form__list">
+        <legend>Personal Information</legend>
+        <label for="sname" class="form__list-item">Surname:
+          <input type="text" id="sname">
+        </label>
+        <label for="name"  class="form__list-item">Name:
+          <input type="text" id="name">
+        </label>
+        <label for="old" class="form__list-item">How old are you?
+          <input id="old" type="number">
+        </label>
+        <label for="birth" class="form__list-item">Full date of birth
+          <input type="date" id="birth">
+        </label>
+        <label id="terms" class="form__list-item">I accept the terms of the agreement
+          <input for="terms"  type="checkbox">
+        </label>
+      </fieldset>
+
+      <fieldset class="form__list">
+        <legend >Registration</legend>
+        <label for="email" class="form__list-item">Email:
+          <input
+           type="email"
+           id="email"
+           placeholder="email@example.com">
+        </label>
+        <label for="pass"  class="form__list-item">Password:
+          <input type="password" id="pass">
+        </label>
+      </fieldset>
+
+      <fieldset class="form__list">
+        <legend>An interesting fact about you!</legend>
+        <label for="cats" class="form__list-item">Do you love cats?:
+          <input
+           id="cats"
+           type="radio"
+           name="cats"
+           value="yes"
+           >Yes
+          <input
+           type="radio"
+           name="cats"
+           value="no">No
+        </label>
+        <label for="color"  class="form__list-item">What is your favorite color?:
+          <input type="color" id="color">
+        </label>
+        <label for="time" class="form__list-item">What time do you go to bed?
+          <input
+           id="time"
+           type="time"
+           step="2">
+        </label>
+        <label for="cars" class="form__list-item">Choose a car:
+          <select id="cars" required>
+            <option disabled selected>Choose a car</option>
+            <option value="bmw">BMW</option>
+            <option value="mercedes-benz">Mercedes-Benz</option>
+            <option value="porsche">Porsche</option>
+            <option value="audi">Audi</option>
+          </select>
+        </label>
+        <label for="work" class="form__list-item">How do you rate our work?
+          <input
+           id="work"
+           type="range"
+           value="0">
+        </label>
+      </fieldset>
+
+      <fieldset class="form__list">
+        <legend>Additional Info:</legend>
+        <label for="comments" class="form__list-item">Comments:
+          <textarea id="comments"></textarea>
+        </label>
+        <label for="recomended"  class="form__list-item">Would you recomended us?
+          <select name="recomended" id="recomended">
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit">submit</button>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
