--- a/src/index.html
+++ b/src/index.html
@@ -13,40 +13,57 @@
   <body>
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
       <fieldset class="form__list">
-        <legend>Personal Information</legend>
+        <legend>Personal information</legend>
         <label for="sname" class="form__list-item">Surname:
-          <input type="text" id="sname">
+          <input
+           type="text"
+           id="sname"
+           autocomplete="off">
         </label>
         <label for="name"  class="form__list-item">Name:
-          <input type="text" id="name">
+          <input
+           type="text"
+           id="name"
+           autocomplete="off">
         </label>
-        <label for="old" class="form__list-item">How old are you?
-          <input id="old" type="number">
+        <label for="old" class="form__list-item">How old are You?
+          <input
+           id="old"
+           type="number"
+           value="12"
+           min="10"
+           max="60" >
         </label>
-        <label for="birth" class="form__list-item">Full date of birth
+        <label for="birth" class="form__list-item">Full date of birth:
           <input type="date" id="birth">
         </label>
-        <label id="terms" class="form__list-item">I accept the terms of the agreement
+        <label id="terms" class="form__list-item">I accept the term of the agreement
           <input for="terms"  type="checkbox">
         </label>
       </fieldset>
 
       <fieldset class="form__list">
         <legend >Registration</legend>
-        <label for="email" class="form__list-item">Email:
+        <label for="email" class="form__list-item">E-mail:
           <input
            type="email"
            id="email"
-           placeholder="email@example.com">
+           placeholder="email@example.com"
+           autocomplete="off">
         </label>
         <label for="pass"  class="form__list-item">Password:
-          <input type="password" id="pass">
+          <input
+           type="password"
+           minlength="8"
+           maxlength="32"
+           id="pass"
+           autocomplete="off">
         </label>
       </fieldset>
 
       <fieldset class="form__list">
         <legend>An interesting fact about you!</legend>
-        <label for="cats" class="form__list-item">Do you love cats?:
+        <label for="cats" class="form__list-item">Do you love cats?
           <input
            id="cats"
            type="radio"
@@ -58,7 +75,7 @@
            name="cats"
            value="no">No
         </label>
-        <label for="color"  class="form__list-item">What is your favorite color?:
+        <label for="color"  class="form__list-item">What is your favorite color?
           <input type="color" id="color">
         </label>
         <label for="time" class="form__list-item">What time do you go to bed?
@@ -67,8 +84,11 @@
            type="time"
            step="2">
         </label>
-        <label for="cars" class="form__list-item">Choose a car:
-          <select id="cars" required>
+        <label for="cars" class="form__list-item">What are your favorite brand of cars?
+          <select
+           id="cars"
+           multiple
+           required>
             <option disabled selected>Choose a car</option>
             <option value="bmw">BMW</option>
             <option value="mercedes-benz">Mercedes-Benz</option>
@@ -86,17 +106,20 @@
 
       <fieldset class="form__list">
         <legend>Additional Info:</legend>
-        <label for="comments" class="form__list-item">Comments:
+        <label
+         for="comments"
+         class="form__list-item"
+         autocomplete="off">Comments:
           <textarea id="comments"></textarea>
         </label>
-        <label for="recomended"  class="form__list-item">Would you recomended us?
+        <label for="recomended"  class="form__list-item">Would you recommend us?
           <select name="recomended" id="recomended">
             <option value="yes">Yes</option>
             <option value="no">No</option>
           </select>
         </label>
       </fieldset>
-      <button type="submit">submit</button>
+      <button type="submit">Submit</button>
     </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
