--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,11 @@
            id="cats"
            type="radio"
            name="cats"
+           class="cats"
            value="yes"
            >Yes
           <input
+           class="cats"
            type="radio"
            name="cats"
            value="no">No
@@ -89,11 +91,11 @@
            id="cars"
            multiple
            required>
-            <option disabled selected>Choose a car</option>
+            
             <option value="bmw">BMW</option>
-            <option value="mercedes-benz">Mercedes-Benz</option>
-            <option value="porsche">Porsche</option>
             <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+            <option ></option>
           </select>
         </label>
         <label for="work" class="form__list-item">How do you rate our work?
