--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
       </fieldset>
 
       <fieldset class="form__list">
-        <legend>Additional Info:</legend>
+        <legend>Additional info:</legend>
         <label
          for="comments"
          class="form__list-item"
@@ -116,8 +116,8 @@
         </label>
         <label for="recomended"  class="form__list-item">Would you recommend us?
           <select name="recomended" id="recomended">
-            <option value="yes">Yes</option>
-            <option value="no">No</option>
+            <option value="yes">yes</option>
+            <option value="no">no</option>
           </select>
         </label>
       </fieldset>
