markup was corrected

--- a/src/index.html
+++ b/src/index.html
@@ -18,25 +18,32 @@
           <input
            type="text"
            id="sname"
-           autocomplete="off">
+           autocomplete="off"
+          >
         </label>
+
         <label for="name"  class="form__list-item">Name:
           <input
            type="text"
            id="name"
-           autocomplete="off">
+           autocomplete="off"
+          >
         </label>
+
         <label for="old" class="form__list-item">How old are You?
           <input
            id="old"
            type="number"
            value="12"
            min="10"
-           max="60" >
+           max="60"
+          >
         </label>
+
         <label for="birth" class="form__list-item">Full date of birth:
           <input type="date" id="birth">
         </label>
+
         <label id="terms" class="form__list-item">I accept the term of the agreement
           <input for="terms"  type="checkbox">
         </label>
@@ -49,15 +56,18 @@
            type="email"
            id="email"
            placeholder="email@example.com"
-           autocomplete="off">
+           autocomplete="off"
+          >
         </label>
+
         <label for="pass"  class="form__list-item">Password:
           <input
            type="password"
            minlength="8"
            maxlength="32"
            id="pass"
-           autocomplete="off">
+           autocomplete="off"
+          >
         </label>
       </fieldset>
 
@@ -70,39 +80,51 @@
            name="cats"
            class="cats"
            value="yes"
-           >Yes
+          >
+          Yes
           <input
            class="cats"
            type="radio"
            name="cats"
-           value="no">No
+           value="no"
+          >
+          No
         </label>
+
         <label for="color"  class="form__list-item">What is your favorite color?
           <input type="color" id="color">
         </label>
+
         <label for="time" class="form__list-item">What time do you go to bed?
           <input
            id="time"
            type="time"
-           step="2">
+           step="2"
+          >
         </label>
+
         <label for="cars" class="form__list-item">What are your favorite brand of cars?
           <select
            id="cars"
            multiple
-           required>
-            
+           required
+          >
             <option value="bmw">BMW</option>
+
             <option value="audi">Audi</option>
+
             <option value="lada">Lada</option>
+
             <option ></option>
           </select>
         </label>
+
         <label for="work" class="form__list-item">How do you rate our work?
           <input
            id="work"
            type="range"
-           value="0">
+           value="0"
+          >
         </label>
       </fieldset>
 
@@ -111,9 +133,12 @@
         <label
          for="comments"
          class="form__list-item"
-         autocomplete="off">Comments:
+         autocomplete="off"
+        >
+        Comments:
           <textarea id="comments"></textarea>
         </label>
+
         <label for="recomended"  class="form__list-item">Would you recommend us?
           <select name="recomended" id="recomended">
             <option value="yes">yes</option>
