markup was corrected

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
         <label for="old" class="form__list-item">How old are You?
           <input
            id="old"
+           class="form__question"
            type="number"
            value="12"
            min="10"
