--- a/src/index.html
+++ b/src/index.html
@@ -89,9 +89,9 @@
       <fieldset class="form__list">
         <legend>An interesting fact about you!</legend>
         <div class="form-box">
-          <label for="cats" class="form__list-item">Do you love cats?
+          <label for="catsY catsN" class="form__list-item">Do you love cats?
             <input
-              id="cats"
+              id="catsY"
               type="radio"
               name="cats"
               class="cats"
@@ -99,6 +99,7 @@
             >
               Yes
             <input
+              id="catsN"
               class="cats"
               type="radio"
               name="cats"
