label was created

--- a/src/index.html
+++ b/src/index.html
@@ -89,10 +89,10 @@
       <fieldset class="form__list">
         <legend>An interesting fact about you!</legend>
         <div class="form-box">
-          <label for="cats dogs" class="form__list-item">Do you love cats?
+          <label for="cat dog" class="form__list-item">Do you love cats?
             <label>
               <input
-              id="cats"
+              id="cat"
               type="radio"
               name="cats"
               class="cats"
@@ -103,7 +103,7 @@
             
             <label>
               <input
-              id="dogs"
+              id="dog"
               class="cats"
               type="radio"
               name="cats"
