--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,63 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="get">
+      <fieldset>
+        <legend>Personal information</legend>
+        <label for="sname">Surname: </label>
+        <input type="text" id="sname" autocomplete="off" ><br>
+        <label for="lname">Name: </label>
+        <input type="text" id="lname" autocomplete="off"><br>
+        <label for="age">How old are You? </label>
+        <input type="number" id="age" value="12"><br>
+        <label for="bday">Full date of birth: </label>
+        <input type="date" id="bday" name="bday"><br>
+        <label for="terms">I accept the term of the agreement</label><input type="checkbox" id="terms" name="terms">
+      </fieldset>
+
+      <fieldset>
+        <legend>Registration</legend>
+        <label for="email">E-mail:</label>
+        <input type="email" placeholder="email@example.com" id="email"><br>
+        <label for="passw">Password:</label>
+        <input type="password" id="passw" minlength="5">
+      </fieldset>
+
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+        Do you love cats?
+        <input type="radio" id="yes" name="yes">
+        <label for="yes">Yes</label>
+        <input type="radio" id="no" name="no">
+        <label for="no">No</label><br>
+        <label for="favcolor">What is your favorite color?</label>
+        <input type="color" name="favcolor" id="favcolor"><br>
+        <label for="timeToBed">What time do you go to bed?</label>
+        <input type="time" name="timeToBed" id="timeToBed"><br>
+        <label for="cars">What are you favorite brands of car?</label>
+        <select id="cars" size="4" multiple>
+          <option value="BMW">BMW</option>
+          <option value="Audi">Audi</option>
+          <option value="Lada">Lada</option>
+        </select><br>
+        <label for="rate">How do you rate our work?</label>
+        <input type="range" name="rate" id="rate" >
+      </fieldset>
+      <fieldset>
+        <legend>Additional info:</legend>
+        <label for="comment">Comments:</label>
+        <textarea id="message" cols="30" rows="2"></textarea><br>
+        <label for="recommend">Would you reccomend us?</label>
+        <select name="recommend" id="recommend">
+          <option value="yes">yes</option>
+          <option value="no">no</option>
+        </select>
+      </fieldset>
+      <label for="btn">
+        <input id="btn" type="submit" value="Submit">
+      </label>
+      
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
