--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,15 @@
       <fieldset>
         <legend>Personal information</legend>
         <label for="sname">Surname: </label>
-        <input type="text" id="sname" autocomplete="off" ><br>
+        <input type="text" id="sname"><br>
         <label for="lname">Name: </label>
-        <input type="text" id="lname" autocomplete="off"><br>
+        <input type="text" id="lname"><br>
         <label for="age">How old are You? </label>
         <input type="number" id="age" value="12"><br>
         <label for="bday">Full date of birth: </label>
-        <input type="date" id="bday" name="bday"><br>
-        <label for="terms">I accept the term of the agreement</label><input type="checkbox" id="terms" name="terms">
+        <input type="date" id="bday" ><br>
+        <label for="terms">I accept the term of the agreement</label>
+        <input type="checkbox" id="terms">
       </fieldset>
 
       <fieldset>
@@ -41,23 +42,23 @@
         <input type="radio" id="no" name="no">
         <label for="no">No</label><br>
         <label for="favcolor">What is your favorite color?</label>
-        <input type="color" name="favcolor" id="favcolor"><br>
+        <input type="color" id="favcolor"><br>
         <label for="timeToBed">What time do you go to bed?</label>
-        <input type="time" name="timeToBed" id="timeToBed"><br>
-        <label for="cars">What are you favorite brands of car?</label>
+        <input type="time" step="1" id="timeToBed"><br>
+        <label for="cars">What are your favorite brand of cars?</label>
         <select id="cars" size="4" multiple>
           <option value="BMW">BMW</option>
           <option value="Audi">Audi</option>
           <option value="Lada">Lada</option>
         </select><br>
         <label for="rate">How do you rate our work?</label>
-        <input type="range" name="rate" id="rate" >
+        <input type="range" id="rate" value="0">
       </fieldset>
       <fieldset>
         <legend>Additional info:</legend>
         <label for="comment">Comments:</label>
-        <textarea id="message" cols="30" rows="2"></textarea><br>
-        <label for="recommend">Would you reccomend us?</label>
+        <textarea id="message" cols="20" rows="2"></textarea><br>
+        <label for="recommend">Would you recommend us?</label>
         <select name="recommend" id="recommend">
           <option value="yes">yes</option>
           <option value="no">no</option>
