--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <label for="lname">Name: </label>
         <input type="text" id="lname"><br>
         <label for="age">How old are You? </label>
-        <input type="number" id="age" value="12"><br>
+        <input type="number" id="age"><br>
         <label for="bday">Full date of birth: </label>
         <input type="date" id="bday" ><br>
         <label for="terms">I accept the term of the agreement</label>
@@ -29,35 +29,35 @@
       <fieldset>
         <legend>Registration</legend>
         <label for="email">E-mail:</label>
-        <input type="email" placeholder="email@example.com" id="email"><br>
+        <input type="email" id="email"><br>
         <label for="passw">Password:</label>
-        <input type="password" id="passw" minlength="5">
+        <input type="password" id="passw">
       </fieldset>
 
       <fieldset>
         <legend>An interesting fact about you!</legend>
         Do you love cats?
-        <input type="radio" id="yes" name="yes">
+        <input type="radio" name="yes">
         <label for="yes">Yes</label>
-        <input type="radio" id="no" name="no">
+        <input type="radio" name="no">
         <label for="no">No</label><br>
         <label for="favcolor">What is your favorite color?</label>
         <input type="color" id="favcolor"><br>
         <label for="timeToBed">What time do you go to bed?</label>
-        <input type="time" step="1" id="timeToBed"><br>
+        <input type="time" step="1"><br>
         <label for="cars">What are your favorite brand of cars?</label>
-        <select id="cars" size="4" multiple>
+        <select id="cars" size="4">
           <option value="BMW">BMW</option>
           <option value="Audi">Audi</option>
           <option value="Lada">Lada</option>
         </select><br>
         <label for="rate">How do you rate our work?</label>
-        <input type="range" id="rate" value="0">
+        <input type="range" id="rate">
       </fieldset>
       <fieldset>
         <legend>Additional info:</legend>
         <label for="comment">Comments:</label>
-        <textarea id="message" cols="20" rows="2"></textarea><br>
+        <textarea cols="20" rows="2"></textarea><br>
         <label for="recommend">Would you recommend us?</label>
         <select name="recommend" id="recommend">
           <option value="yes">yes</option>
@@ -65,7 +65,7 @@
         </select>
       </fieldset>
       <label for="btn">
-        <input id="btn" type="submit" value="Submit">
+        <input type="submit" value="Submit">
       </label>
       
     </form>
