--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,14 @@
       <fieldset>
         <legend>An interesting fact about you!</legend>
         Do you love cats?
-        <input type="radio" name="yes">
+        <input type="radio" id="yes" name="yes">
         <label for="yes">Yes</label>
-        <input type="radio" name="no">
+        <input type="radio" id="no" name="no">
         <label for="no">No</label><br>
         <label for="favcolor">What is your favorite color?</label>
         <input type="color" id="favcolor"><br>
         <label for="timeToBed">What time do you go to bed?</label>
-        <input type="time" step="1"><br>
+        <input type="time" id="timeToBed" step="1"><br>
         <label for="cars">What are your favorite brand of cars?</label>
         <select id="cars" size="4">
           <option value="BMW">BMW</option>
