--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
       <fieldset>
         <legend>An interesting fact about you!</legend>
         Do you love cats?
-        <input type="radio" id="yes">
+        <input type="radio" name="yes">
         <label for="yes">Yes</label>
-        <input type="radio" id="no">
+        <input type="radio" name="no">
         <label for="no">No</label><br>
         <label for="favcolor">What is your favorite color?</label>
         <input type="color" id="favcolor"><br>
