--- a/src/index.html
+++ b/src/index.html
@@ -11,61 +11,181 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="get">
+    <form 
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application" 
+      method="get"
+    >
       <fieldset>
-        <legend>Personal information</legend>
-        <label for="sname">Surname: </label>
-        <input type="text" id="sname"><br>
-        <label for="lname">Name: </label>
-        <input type="text" id="lname"><br>
-        <label for="age">How old are You? </label>
-        <input type="number" id="age"><br>
-        <label for="bday">Full date of birth: </label>
-        <input type="date" id="bday" ><br>
-        <label for="terms">I accept the term of the agreement</label>
-        <input type="checkbox" id="terms">
+        <legend>
+          Personal information
+        </legend>
+        <label for="sname">
+          Surname: 
+        </label>
+        <input 
+          type="text"
+          autocomplete="off"
+          id="sname"
+        >
+        <br>
+        <label for="lname">
+          Name: 
+        </label>
+        <input 
+          type="text"
+          autocomplete="off"
+          id="lname"
+        >
+        <br>
+        <label for="age">
+          How old are You?
+        </label>
+        <input 
+          type="number" 
+          id="age"
+          min="1"
+          max="100"
+          value="12"
+        >
+        <br>
+        <label for="bday">
+          Full date of birth:
+        </label>
+        <input 
+          type="date" 
+          id="bday" 
+        >
+        <br>
+        <label for="terms">
+          I accept the term of the agreement
+        </label>
+        <input 
+          type="checkbox" 
+          id="terms"
+        >
       </fieldset>
 
       <fieldset>
-        <legend>Registration</legend>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email"><br>
-        <label for="passw">Password:</label>
-        <input type="password" id="passw">
+        <legend>
+          Registration
+        </legend>
+        <label for="email">
+          E-mail:
+        </label>
+        <input 
+          type="email" 
+          id="email"
+          placeholder="email@example.com"
+        >
+        <br>
+        <label for="passw">
+          Password:
+        </label>
+        <input 
+          type="password" 
+          id="passw"
+          required
+        >
       </fieldset>
 
       <fieldset>
-        <legend>An interesting fact about you!</legend>
-        Do you love cats?
-        <input type="radio" name="yes">
-        <label for="yes">Yes</label>
-        <input type="radio" name="no">
-        <label for="no">No</label><br>
-        <label for="favcolor">What is your favorite color?</label>
-        <input type="color" id="favcolor"><br>
-        <label for="timeToBed">What time do you go to bed?</label>
-        <input type="time" id="timeToBed"><br>
-        <label for="cars">What are your favorite brand of cars?</label>
-        <select id="cars" size="4">
-          <option value="BMW">BMW</option>
-          <option value="Audi">Audi</option>
-          <option value="Lada">Lada</option>
-        </select><br>
-        <label for="rate">How do you rate our work?</label>
-        <input type="range" id="rate">
+        <legend>
+          An interesting fact about you!
+        </legend>
+        <label for="loveCats" id="loveCats">
+          Do you love cats?
+        </label>
+        <input 
+          id="yes"
+          type="radio" 
+          name="yes"
+        >
+        <label for="yes">
+          Yes
+        </label>
+        <input 
+          id="no"
+          type="radio" 
+          name="no"
+        >
+        <label for="no">
+          No
+        </label>
+        <br>
+        <label for="favColor">
+          What is your favorite color?
+        </label>
+        <input 
+          type="color" 
+          id="favColor"
+        >
+        <br>
+        <label for="timeToBed">
+          What time do you go to bed?
+        </label>
+        <input 
+          type="time"
+          step="2"
+          id="timeToBed"
+        >
+        <br>
+        <label for="cars" id="CARS">
+          What are your favorite brand of cars?
+        </label>
+        <select 
+          id="cars" 
+          size="4"
+        >
+          <option value="BMW">
+            BMW
+          </option>
+          <option value="Audi">
+            Audi
+          </option>
+          <option value="Lada">
+            Lada
+          </option>
+        </select>
+        <br>
+        <label for="rate">
+          How do you rate our work?
+        </label>
+        <input 
+          type="range" 
+          id="rate"
+          value="0"
+        >
       </fieldset>
       <fieldset>
-        <legend>Additional info:</legend>
-        <label for="comment">Comments:</label>
-        <textarea cols="20" rows="2"></textarea><br>
-        <label for="recommend">Would you recommend us?</label>
-        <select name="recommend" id="recommend">
-          <option value="yes">yes</option>
-          <option value="no">no</option>
+        <legend>
+          Additional info:
+        </legend>
+        <label for="comment" id="comment">
+          Comments:
+        </label>
+        <textarea cols="20" rows="2">
+        </textarea>
+        <br>
+        <label for="recommend">
+          Would you recommend us?
+        </label>
+        <select 
+          name="recommend" 
+          id="recommend"
+        >
+          <option value="yes">
+            yes
+          </option>
+          <option value="no">
+            no
+          </option>
         </select>
       </fieldset>
       <label for="btn">
-        <input type="submit" value="Submit">
+        <input 
+          type="submit" 
+          value="Submit"
+        >
       </label>
       
     </form>
