--- a/src/index.html
+++ b/src/index.html
@@ -20,18 +20,22 @@
           <label for="Surname">
             Surname:
           </label>
-          <input id="Surname" type="text"
-          name="Surname"
-          autocomplete="off"
-          required
+          <input
+            id="surname"
+            type="text"
+            name="surname"
+            autocomplete="off"
+            required
           >
         </div>
         <div>
           <label for="Name">
             Name:
           </label>
-          <input type="text" name="Name"
-          id="Name"
+          <input
+          type="text"
+          name="name"
+          id="name"
           autocomplete="off"
           >
         </div>
@@ -39,30 +43,34 @@
           <label for="age">
             How old are You?
           </label>
-          <input type="number"
-          id="age"
-          value="12"
-          name="age"
-          min="1"
-          max="100"
+          <input
+            type="number"
+            id="age"
+            value="12"
+            name="age"
+            min="1"
+            max="100"
           >
         </div>
         <div>
           <label for="birth">
             Full date of birth:
           </label>
-          <input type="date"
-          id="birth"
-          name="birth"
-          autocomplete="off"
+          <input
+            type="date"
+            id="birth"
+            name="birth"
+            autocomplete="off"
           >
         </div>
         <div class="last">
           <label for="term">
             I accept the term of the agreement
           </label>
-          <input type="checkbox" name="term"
-          id="term"
+          <input
+            type="checkbox"
+            name="term"
+            id="term"
           >
         </div>
       </fieldset>
@@ -72,21 +80,23 @@
           <label for="email">
             E-mail:
           </label>
-          <input type="email"
-          id="email"
-          placeholder="email@example.com"
-          name="email"
-          autocomplete="off"
+          <input
+            type="email"
+            id="email"
+            placeholder="email@example.com"
+            name="email"
+            autocomplete="off"
           >
         </div>
         <div class="last">
           <label for="pass">
             Password:
           </label>
-          <input type="password"
-          id="pass"
-          name="Password"
-          autocomplete="off"
+          <input
+            type="password"
+            id="pass"
+            name="Password"
+            autocomplete="off"
           >
         </div>
       </fieldset>
@@ -96,30 +106,36 @@
         </legend>
         <div>
           Do you love cats?
-          <input type="radio" id="yes"
-          name="cats"
+          <input
+            type="radio"
+            id="yes"
+            name="cats"
           > <label for="yes">Yes</label>
-          <input type="radio" id="no"
-          name="cats"
+          <input
+            type="radio"
+            id="no"
+            name="cats"
           > <label for="no">No</label>
         </div>
         <div>
           <label for="color">
             What is your favorite color?
           </label>
-          <input type="color"
-          id="color"
-          name="color"
+          <input
+            type="color"
+            id="color"
+            name="color"
           >
         </div>
         <div>
           <label for="time">
             What time do you go to bed?
           </label>
-          <input type="time"
-          step="1"
-          id="time"
-          name="time"
+          <input
+            type="time"
+            step="1"
+            id="time"
+            name="time"
           >
         </div>
         <div>What are your favorite brand of cars?
@@ -139,12 +155,13 @@
           <label for="rate">
             How do you rate our work?
           </label>
-          <input type="range"
-          value="0"
-          min="0"
-          max="100"
-          id="rate"
-          name="rate"
+          <input
+            type="range"
+            value="0"
+            min="0"
+            max="100"
+            id="rate"
+            name="rate"
           >
         </div>
       </fieldset>
@@ -156,18 +173,26 @@
           <label for="com">
             Comments:
           </label>
-          <textarea minlength="10" maxlength="300"
-           name="Comments" id="com"
-          cols="30" rows="2"
-          autocomplete="off">
+          <textarea
+            minlength="10"
+            maxlength="300"
+            name="Comments"
+            id="com"
+            cols="30"
+            rows="2"
+            autocomplete="off"
+          >
           </textarea>
         </div>
         <div class="last">
           <label for="rec">
             Would you recommend us?
           </label>
-          <select name="recommend" id="rec"
-          autocomplete="off">
+          <select
+            name="recommend"
+            id="rec"
+            autocomplete="off"
+          >
             <option value="yes">
               Yes
             </option>
@@ -177,11 +202,17 @@
           </select>
         </div>
       </fieldset>
-      <button type="submit" name="button">
+      <button
+        type="submit"
+        name="button"
+      >
           Submit
       </button>
     </form>
-    <script type="text/javascript" src="./main.js">
+    <script
+      type="text/javascript"
+      src="./main.js"
+    >
     </script>
   </body>
 </html>
