--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,71 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
-  </body>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" class="task_form">
+        <fieldset class="article">
+            <legend>Personal information</legend>
+            <label for="name">Surname:</label>
+            <input class="inputField" inputField type="text " name="surname " required autocomplete="off "><br>
+            <label for="name ">Name:</label>
+            <input class="inputField" inputField type="text" name="name" required autocomplete="off"><br>
+            <label for="number">How old are You?</label>
+            <input class="inputField" type="number " name="number " required value="12 " min="1 " max="100 "><br>
+            <label for="number ">Full date of birth:</label>
+            <input class="inputField" inputField type="daate" name="date" required placeholder="mm/dd/yyyy"><br>
+            <label for="checkbox">I accept the term of the agreement:</label>
+            <input class="inputField" inputField type="checkbox " name="checkbox " required></fieldset>
+
+        <fieldset class="article">
+            <legend>Registration</legend>
+            <label for="E-mail ">E-mail:</label>
+            <input class="inputField" type="email" placeholder="email@example.com" required autocomplete="off"><br>
+            <label for="password">Password:</label>
+            <input class="inputField" inputField type="password ">
+        </fieldset>
+        <fieldset class="article">
+            <legend>An interesting fact about you!</legend>
+            <label for="cats ">Do you love cats?</label>
+            <input class="" inputField type="radio" value="yes" name="yes" id="yes"> <label for="yes">Yes</label>
+            <input class="inputField" type="radio " value="no " name="yes " id="yes "> <label for="no ">No</label><br>
+            <label for="color ">What is your favourite color?</label>
+            <input class="inputField" inputField type="color"><br>
+            <label for="color">What time do you go to bed?</label>
+            <input class="inputField" inputField type="time "><br>
+            <label for="color ">What is your favourite brands of car?</label>
+            <select class="inputField" name="cars " id="cars " multiple size="minimum-scale " class="dis ">
+              <option value="BMW ">BMW</option>
+              <option value="Audi ">Audi</option>
+              <option value="Lada ">Lada</option>
+              <option value="def "></option>
+            </select><br>
+            <label for="work ">How do you rate out work?</label>
+            <input class="inputField" type="range"></fieldset>
+        <fieldset class="article">
+            <legend class="article">Additional info:</legend>
+            <label for="text-area">Comments:</label>
+            <textarea name="comments" id="" cols="10" rows="2" required autocomplete="off" minlength="1" maxlength="200">
+        </textarea><br>
+            <label for="Whould you reccomend us?">Would you reccomend us?</label>
+            <select class="inputField" name="recommend" id="reccomend" class="dis">
+              <option value="yes">yes</option>
+              <option value="no">no</option>
+            </select>
+
+        </fieldset>
+        <div><input type="submit" value="Submit" class="article">
+    </form>
+    <script type="text/javascript" src="./main.js">
+    </script>
+</body>
+
 </html>
